fixed layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,8 @@ h1 {
 	border:none;
 	border-top:5px solid #ff6d40;
 	border-radius:0;
+	width:360px;
+	height:370px;
 }
 
 .thumbnail img {
